--- a/src/main/resources/templates/inside/quiz2.html
+++ b/src/main/resources/templates/inside/quiz2.html
@@ -7,7 +7,7 @@
       content="width=device-width, initial-scale=1.0, user-scalable=no"
     />
     <title
-      th:text="'스테이지 ' + ${stageNumber} + ' - ' + ${teamNumber} + '조 ' + ${questionNumber} + '번 문제'"
+      th:text="'상기네무인카페 ' + ${teamNumber} + '조 ' + ${questionNumber} + '번 문제'"
     >
       문제 페이지
     </title>
@@ -213,7 +213,7 @@
       <div class="header">
         <div
           class="question-info"
-          th:text="'스테이지 ' + ${stageNumber} + ' | ' + ${teamNumber} + '조'"
+          th:text="'상기네무인카페 ' + ${teamNumber} + '조'"
         >
           문제 정보
         </div>
