--- a/src/main/resources/templates/place/nextPlace2.html
+++ b/src/main/resources/templates/place/nextPlace2.html
@@ -2,7 +2,7 @@
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
   <head>
     <meta charset="UTF-8" />
-    <title th:text="'2번 사업장 - ' + ${teamNumber} + '조 전용 페이지'">
+    <title th:text="'상기네무인카페 - ' + ${teamNumber} + '조 전용 페이지'">
       조별 전용 페이지
     </title>
     <style>
@@ -31,7 +31,7 @@
   </head>
   <body>
     <div class="container">
-      <h1 th:text="'1번 사업장 - ' + ${teamNumber} + '조'">조 제목</h1>
+      <h1 th:text="'상기네무인카페 - ' + ${teamNumber} + '조'">조 제목</h1>
 
       <div class="image-container">
         <!-- 1번 사업장 조별 이미지 직접 지정 -->
