--- a/src/main/resources/templates/place/password4.html
+++ b/src/main/resources/templates/place/password4.html
@@ -6,9 +6,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, user-scalable=no"
     />
-    <title
-      th:text="'스테이지 ' + ${stageNumber} + ' - ' + ${teamNumber} + '조 비밀번호'"
-    >
+    <title th:text="'카페드림 ' + ${teamNumber} + '조 비밀번호'">
       비밀번호 입력
     </title>
     <style>
@@ -274,9 +272,7 @@
       <h1 th:text="'🔐 ' + ${teamNumber} + '조 비밀번호를 입력하세요'">
         비밀번호 입력
       </h1>
-      <div class="stage-info" th:text="'사업장 ' + ${stageNumber}">
-        사업장 정보
-      </div>
+      <div class="stage-info" th:text="'카페드림'">카페드림</div>
 
       <div class="form-container">
         <form
