--- a/src/main/resources/templates/place/nextPlace3.html
+++ b/src/main/resources/templates/place/nextPlace3.html
@@ -37,7 +37,7 @@
         <!-- 1번 사업장 조별 이미지 직접 지정 -->
         <img
           th:if="${teamNumber == 1}"
-          src="/images/쌍용스토어.JPG"
+          src="/images/카페드림.JPG"
           alt="1조 전용 이미지"
           class="team-image"
         />
@@ -49,7 +49,7 @@
         />
         <img
           th:if="${teamNumber == 3}"
-          src="/images/새봄약국.JPG"
+          src="/images/상기네무인카페.JPG"
           alt="3조 전용 이미지"
           class="team-image"
         />
@@ -61,13 +61,13 @@
         />
         <img
           th:if="${teamNumber == 5}"
-          src="/images/상기네무인카페.JPG"
+          src="/images/새봄약국.JPG"
           alt="5조 전용 이미지"
           class="team-image"
         />
         <img
           th:if="${teamNumber == 6}"
-          src="/images/쌍용스토어.JPG"
+          src="/images/카페드림.JPG"
           alt="6조 전용 이미지"
           class="team-image"
         />
