--- a/src/main/resources/templates/place/nextPlace1.html
+++ b/src/main/resources/templates/place/nextPlace1.html
@@ -87,8 +87,8 @@
         <!-- 빨간색 안내 메시지 -->
         <div class="notice-message">
           다음 장소 이동 중 근처 인생네컷(포토이즘, 포토 시그니처 등)에 들려
-          단체사진 촬영하고 사진 + 동영상을 본부로 전송하세요. &lt;전송과
-          상관없이 다음 장소로 이동하시면 됩니다. ^.^&gt;
+          단체사진 촬영하고 사진 + 동영상을 본부로 전송하세요.<br />
+          &lt;전송과 상관없이 다음 장소로 이동하시면 됩니다. ^.^&gt;
         </div>
       </div>
     </div>
