--- a/src/main/resources/templates/place/nextPlace1.html
+++ b/src/main/resources/templates/place/nextPlace1.html
@@ -90,6 +90,12 @@
           단체사진 촬영하고 사진 + 동영상을 본부로 전송하세요.<br />
           &lt;전송과 상관없이 다음 장소로 이동하시면 됩니다. ^.^&gt;
         </div>
+
+        <!-- 추가된 안내 텍스트 -->
+        <div class="instruction-text">
+          해당 사업장에 가셔서 QR 2개를 찾으세요.<br />
+          (문제 QR, 장소 힌트 QR)
+        </div>
       </div>
     </div>
   </body>
