--- a/src/main/resources/templates/place/nextPlace4.html
+++ b/src/main/resources/templates/place/nextPlace4.html
@@ -71,6 +71,12 @@
           alt="6조 전용 이미지"
           class="team-image"
         />
+
+        <!-- 추가된 안내 텍스트 -->
+        <div class="instruction-text">
+          해당 사업장에 가셔서 QR 2개를 찾으세요.<br />
+          (문제 QR, 장소 힌트 QR)
+        </div>
       </div>
     </div>
   </body>
